--- a/customerapi/src/main/resources/application.properties
+++ b/customerapi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=7070
 spring.application.name=Customer-API
-spring.datasource.url=jdbc:mysql://mysql:3306/boajunecustomerdb?useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/boajunecustomerdb?useSSL=true
 spring.datasource.username=root
 spring.datasource.password=vignesh
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -12,6 +12,7 @@ spring.jpa.show-sql=true
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.continue-on-error=false
 spring.datasource.generate-unique-name=false
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.serialization.fail-on-empty-beans=false
