--- a/customerapi/src/main/resources/application.properties
+++ b/customerapi/src/main/resources/application.properties
@@ -4,6 +4,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/boajunecustomerdb?useSSL=true
 spring.datasource.username=root
 spring.datasource.password=vignesh
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+#data source connection pool
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=12
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
