--- a/customerapi/pom.xml
+++ b/customerapi/pom.xml
@@ -96,6 +96,19 @@
 		    <artifactId>guava</artifactId>
 		    <version>19.0</version>
 		</dependency>
+		<!-- filtering with squiggly -->
+		<dependency>
+    <groupId>com.github.bohnman</groupId>
+    <artifactId>squiggly-filter-jackson</artifactId>
+    <version>1.3.18</version>
+     <!-- <exclusions>
+    	<exclusion>
+    		<groupId>org.antlr</groupId>
+    		<artifactId>antlr4-runtime</artifactId>
+    		
+    	</exclusion>
+    </exclusions> -->
+</dependency>
 		
 	</dependencies>
 
