--- a/customerapi/src/main/resources/application.properties
+++ b/customerapi/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.serialization.fail-on-empty-beans=false
+
+#graphql.servlet.mapping: /apis/graphql
+graphql.tools.schema-location-pattern: **/*.graphqls
