--- a/customerapi/pom.xml
+++ b/customerapi/pom.xml
@@ -101,13 +101,13 @@
     <groupId>com.github.bohnman</groupId>
     <artifactId>squiggly-filter-jackson</artifactId>
     <version>1.3.18</version>
-     <!-- <exclusions>
+      <exclusions>
     	<exclusion>
     		<groupId>org.antlr</groupId>
     		<artifactId>antlr4-runtime</artifactId>
     		
     	</exclusion>
-    </exclusions> -->
+    </exclusions> 
 </dependency>
 		
 <!-- graphql -->
@@ -135,6 +135,13 @@
             <version>5.0.2</version>
         </dependency>
 
+		<dependency>
+		    <groupId>org.antlr</groupId>
+		    <artifactId>antlr4-runtime</artifactId>
+		    <version>4.7.1</version>
+		    <scope>compile</scope>
+       </dependency>
+        
 		
 
 		
