--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/eswaribala/boaconfigrepo.git
+#spring.cloud.config.server.git.username=trolley
+#spring.cloud.config.server.git.password=strongpassword
 
