--- a/customerapicloud/src/main/resources/application.properties
+++ b/customerapicloud/src/main/resources/application.properties
@@ -1,29 +1,7 @@
 server.port=7070
-spring.application.name=Customer-API
-spring.datasource.url=jdbc:mysql://localhost:3306/boajunecustomerdb?useSSL=true
-spring.datasource.username=root
-spring.datasource.password=vignesh
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-#data source connection pool
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=12
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1200000
-# JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=default
-spring.jpa.show-sql=true
-# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.continue-on-error=false
-spring.datasource.generate-unique-name=false
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jackson.serialization.fail-on-empty-beans=false
-
+spring.application.name=CUSTOMER_API,boa-common,boa-app
+#spring.profiles.active=dev
+#config server properties
+spring.cloud.config.uri=http://localhost:8888
 #graphql.servlet.mapping: /apis/graphql
 graphql.tools.schema-location-pattern: **/*.graphqls
