--- a/customerapicloud/src/main/resources/application.properties
+++ b/customerapicloud/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.application.name=CUSTOMER_API,boa-common,boa-app
 spring.cloud.config.uri=http://localhost:8888
 #graphql.servlet.mapping: /apis/graphql
 graphql.tools.schema-location-pattern: **/*.graphqls
+#rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
