--- a/customerapicloud/pom.xml
+++ b/customerapicloud/pom.xml
@@ -159,7 +159,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-vault-config</artifactId>
 		</dependency>
+		<!-- Eureka -->
 		
+        <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		 
 
 		
 	</dependencies>
