--- a/customerapi/src/main/resources/application.properties
+++ b/customerapi/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 
 #graphql.servlet.mapping: /apis/graphql
 graphql.tools.schema-location-pattern: **/*.graphqls
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus,info,health
