--- a/customerapi/src/main/resources/application.properties
+++ b/customerapi/src/main/resources/application.properties
@@ -31,3 +31,14 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus,info,health
+
+#jaegar
+opentracing.jaeger.udp-sender.host=host.docker.internal
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.const-sampler.decision=true
+opentracing.jaeger.enabled=true
+opentracing.jaeger.log-spans=true
+opentracing.jaeger.service-name=Customer-API
+
+#spring.zipkin.base-url=http://localhost:9411/
+#spring.sleuth.sampler.probability=1
