--- a/customerapiproducer/pom.xml
+++ b/customerapiproducer/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.boa</groupId>
-	<artifactId>customerapi</artifactId>
+	<artifactId>customerapiproducer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>customerapi</name>
+	<name>customerapiproducer</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
