--- a/rmapiconsumer/src/main/resources/application.properties
+++ b/rmapiconsumer/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=9002
+spring.application.name=RM-Service
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=customerdb
+spring.data.mongodb.url=mongodb://localhost:27017/customerdb
+#kafka properties
+kafka.bootstrapAddress=localhost:9092
+customer.topic.name=boa-customers
+customer.topic.group.id=group_id
 
+appointment.topic.name=boa-appointments
+appointment.topic.group.id=group_id
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.register-with-eureka=true
+#eureka.client.healthcheck.enabled=true
+#eureka.instance.leaseRenewalIntervalInSeconds=1
+#eureka.instance.leaseExpirationDurationInSeconds=2
