--- a/customerapi/src/main/resources/application.properties
+++ b/customerapi/src/main/resources/application.properties
@@ -33,7 +33,7 @@ management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus,info,health
 
 #jaegar
-opentracing.jaeger.udp-sender.host=host.docker.internal
+opentracing.jaeger.udp-sender.host=localhost
 opentracing.jaeger.udp-sender.port=6831
 opentracing.jaeger.const-sampler.decision=true
 opentracing.jaeger.enabled=true
